# netwatch

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
netwatch/: __init__.py  ai.py  cli.py  config.py  database.py  logger.py  reports.py  server.py
netwatch/templates/: index.html
tests/: test_ai.py  test_database.py  test_export.py  test_logger.py
